--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -10,7 +10,7 @@ import MenuDropdown from "./MenuDropdown.astro";
     <!-- Logo y título - Responsivo -->
     <a href="/" class="flex items-center gap-2 sm:gap-3">
       <img
-        src="/logo.png"
+        src="logos/logo.png"
         alt="Logo CIIEMAD IPN"
         class="h-10 sm:h-12 lg:h-16 w-auto"
       />
